# miniserve

./: .gitignore  Makefile  README.md  pyproject.toml
benchmarks/: decode.py  hardware_bandwidth.py
docs/: getting_started.md
src/miniserve/: __init__.py
src/miniserve/api/: __init__.py  app.py  schemas.py  streaming.py
src/miniserve/cache/: __init__.py  base.py  contiguous.py  naive.py
src/miniserve/engine/: __init__.py  attention.py  batching.py  decode.py  generation.py  sampling.py  toy_decoder.py  transformer_block.py
src/miniserve/metrics/: __init__.py  roofline.py  timing.py
src/miniserve/models/: __init__.py  adapter.py
src/miniserve/serving/: __init__.py  executor.py  request.py
tests/: test_project_setup.py
tests/integration/: test_cached_decode.py  test_golden_tokens.py  test_model_adapter.py  test_static_batching.py  test_streaming_api.py
tests/unit/: test_attention_reference.py  test_greedy_generation.py  test_kv_cache.py  test_mlx_execution.py  test_request_lifecycle.py  test_roofline.py  test_sampling.py  test_timing.py  test_tokenizer_contract.py  test_toy_decoder.py  test_transformer_block.py
tools/: attention_shapes.py  hardware_report.py  inspect_forward.py  load_client.py  mlx_execution_lab.py  reference_tokens.py  tokenizer_lab.py
