[project]
name = "miniserve"
version = "0.1.0"
description = "A from-scratch local language-model inference serving system for systems-engineering study."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "mlx>=0.29,<1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-lm>=0.26,<1; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "numpy>=2,<3",
    "pandas>=2,<3",
    "matplotlib>=3.9,<4",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "ruff>=0.11,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miniserve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
